<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/profile_color"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frag_edituser"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/profile_color"
        app:layout_editor_absoluteX="0dp"
        app:layout_editor_absoluteY="0dp"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:contentDescription="@string/placeholder"
            android:scaleType="centerCrop"
            android:src="@drawable/edituser_header"
            app:layout_constraintBottom_creator="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/frag_edituser"
            app:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="@+id/frag_edituser"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_creator="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_editor_absoluteX="0dp"
            app:layout_editor_absoluteY="0dp"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

        <TextView
            android:id="@+id/fname"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:text="@string/f_name"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header" />

        <EditText
            android:id="@+id/et_fname"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/enter_fname"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:paddingLeft="15dp"
            android:textSize="15dp"
            app:layout_constraintStart_toEndOf="@+id/fname"
            app:layout_constraintTop_toBottomOf="@+id/header" />

        <TextView
            android:id="@+id/lname"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:text="@string/l_name"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fname" />

        <EditText
            android:id="@+id/et_lname"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/enter_lname"
            android:inputType="textCapWords"
            android:paddingLeft="15dp"
            android:textSize="15dp"
            app:layout_constraintStart_toEndOf="@+id/lname"
            app:layout_constraintTop_toBottomOf="@+id/et_fname" />

        <TextView
            android:id="@+id/age"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:text="@string/age"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lname" />

        <Spinner
            android:id="@+id/age_spin"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:background="@android:drawable/btn_dropdown"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toEndOf="@+id/age"
            app:layout_constraintTop_toBottomOf="@+id/et_lname" />

        <TextView
            android:id="@+id/sex"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:text="@string/sex"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/age" />

        <Spinner
            android:id="@+id/sex_spin"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:background="@android:drawable/btn_dropdown"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toEndOf="@+id/sex"
            app:layout_constraintTop_toBottomOf="@+id/age_spin" />

        <TextView
            android:id="@+id/country"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:text="@string/country"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sex" />

        <Spinner
            android:id="@+id/country_spin"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:background="@android:drawable/btn_dropdown"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toEndOf="@+id/country"
            app:layout_constraintTop_toBottomOf="@+id/sex_spin" />

        <TextView
            android:id="@+id/city"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:text="@string/city"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/country" />

        <Spinner
            android:id="@+id/city_spin"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:background="@android:drawable/btn_dropdown"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toEndOf="@+id/city"
            app:layout_constraintTop_toBottomOf="@+id/country_spin" />

        <TextView
            android:id="@+id/height"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:text="@string/height"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/city" />

        <Spinner
            android:id="@+id/height_spin"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:background="@android:drawable/btn_dropdown"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toEndOf="@+id/height"
            app:layout_constraintTop_toBottomOf="@+id/city_spin" />

        <TextView
            android:id="@+id/weight"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:text="@string/weight"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/height" />

        <Spinner
            android:id="@+id/weight_spin"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:background="@android:drawable/btn_dropdown"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toEndOf="@+id/weight"
            app:layout_constraintTop_toBottomOf="@+id/height_spin" />

        <TextView
            android:id="@+id/profile_pic"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:text="@string/photo"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weight" />

        <Button
            android:id="@+id/pic_button"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/pic_button"
            app:layout_constraintStart_toEndOf="@id/profile_pic"
            app:layout_constraintTop_toBottomOf="@+id/weight_spin" />

        <Button
            android:id="@+id/sub_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:text="@string/submit_button"
            android:background="@color/colorPrimary"
            android:textColor="@color/profile_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pic_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>