<resources>
    <string name="app_name">WAMApp</string>
    <string name="placeholder">Placeholder</string>
    <string name="f_l_name">Name </string>
    <string name="f_name">First Name </string>
    <string name="l_name">Last Name </string>
    <string name="age">Age </string>
    <string name="sex">Sex </string>
    <string name="country">Country </string>
    <string name="city">City </string>
    <string name="height">Height (in) </string>
    <string name="weight">Weight (lbs) </string>
    <string name="photo">Take Profile Picture </string>
    <string name="enter_fname">First Name</string>
    <string name="enter_lname">Last Name</string>
    <string name="submit_button">Submit</string>
    <string name="splash_string">WAMApp</string>
    <string name="bmi_head">Your BMI:</string>
    <string name="activity_level">Activity Level</string>
    <string name="weight_goal">Weight Goal</string>
    <string name="calorie_label">Target Calories</string>
    <string name="calorie_label2">Per Day</string>
    <string name="hikes">Click to Search for Hikes</string>
    <string name="search">Search</string>
    <string name = "bmr_head">Your BMR: </string>
    <string name = "profile">Profile Page</string>
    <string name = "full_name">Name</string>
    <string name = "placeholder_name">Disgruntled Client</string>
    <string name = "step_head">Steps: </string>
</resources>